--- a/Kyu/Views/Demo/Index.cshtml
+++ b/Kyu/Views/Demo/Index.cshtml
@@ -1,5 +1,11 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Demonstration Page";
 }
- 
+
+
+<h3>KYU MVC Components Demo Page</h3>
+
+<ul>
+    <li>WebGrid</li>
+    <li>Calendar</li>
+</ul>
